--- a/node/deploy/.npmrc
+++ b/node/deploy/.npmrc
@@ -1,1 +1,3 @@
+# In this case we really don't want to generate a package lock
+# file because it messes with git status, pull, etc.
 package-lock=false
