--- a/node/deploy/package.json
+++ b/node/deploy/package.json
@@ -3,6 +3,7 @@
     "dot": "1.1.2",
     "highlight.js": "9.12.0",
     "marked": "0.3.6",
-    "mkdirp": "0.5.1"
+    "mkdirp": "0.5.1",
+    "pygmentize-bundled": "2.3.0"
   }
 }
